[package]
name = "rusty-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
