[package]
name = "rusty-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
